Add Freemarker source editor and simple text output; also layout

--- a/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
+++ b/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
@@ -2,6 +2,7 @@ jsconsole.tool.JavaScriptConsoleTool.tab.jsInput.title=JavaScript Source
 jsconsole.tool.JavaScriptConsoleTool.tab.ftlInput.title=Freemarker Source
 
 jsconsole.tool.JavaScriptConsoleTool.tab.consoleOutput.title=Console Output
+jsconsole.tool.JavaScriptConsoleTool.tab.textOutput.title=Text Output
 
 jsconsole.tool.JavaScriptConsoleTool.button.execute.label=Execute
 jsconsole.tool.JavaScriptConsoleTool.button.execute.title=Execute in currently selected JavaScript Console backend
