--- a/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
+++ b/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
@@ -1,5 +1,6 @@
 jsconsole.tool.JavaScriptConsoleTool.tab.jsInput.title=JavaScript Source
 jsconsole.tool.JavaScriptConsoleTool.tab.ftlInput.title=Freemarker Source
+jsconsole.tool.JavaScriptConsoleTool.tab.parameterInput.title=Execution Parameters
 
 jsconsole.tool.JavaScriptConsoleTool.tab.consoleOutput.title=Console Output
 jsconsole.tool.JavaScriptConsoleTool.tab.textOutput.title=Text Output
