Style iteration on parameter form; discovered limitation in AlfDynamicPayloadButton

--- a/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/backend/i18n/LegacyRepositoryConsoleBackend.properties
+++ b/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/backend/i18n/LegacyRepositoryConsoleBackend.properties
@@ -1,21 +1,21 @@
 jsconsole.backend.LegacyRepositoryConsoleBackend.label=Classic JavaScript Console
 jsconsole.backend.LegacyRepositoryConsoleBackend.description=The classic JavaScript Console backend allowing execution of Repository-tier web script JavaScript code and/or Freemarker template
 
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.urlArguments.label=URL arguments
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.urlArguments.description=
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.urlArguments.label=URL arguments
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.urlArguments.description=
 
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.runAs.label=Run as
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.runAs.description=
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.runAs.label=Run as
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.runAs.description=
 
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.isolation.label=Transaction isolation
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.isolation.description=
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.isolation.none.label=None
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.isolation.readOnly.label=Read-only
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.isolation.readWrite.label=Read-write
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.isolation.label=Transaction isolation
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.isolation.description=
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.isolation.none.label=None
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.isolation.readOnly.label=Read-only
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.isolation.readWrite.label=Read-write
 
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.runLikeCrazy.label=Run like crazy
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.runLikeCrazy.description=
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.runLikeCrazy.tenS.label=Repeat 10s after response
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.runLikeCrazy.oneS.label=Repeat 1s after response
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.runLikeCrazy.zero.label=Repeat after response
-jsconsole.backend.LegacyRepositoryConsoleBackend.params.runLikeCrazy.off.label=No repeat
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.runLikeCrazy.label=Run like crazy
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.runLikeCrazy.description=
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.runLikeCrazy.tenS.label=Repeat 10s after response
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.runLikeCrazy.oneS.label=Repeat 1s after response
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.runLikeCrazy.zero.label=Repeat after response
+jsconsole.backend.LegacyRepositoryConsoleBackend.parameters.runLikeCrazy.off.label=No repeat
