Add performance report panel

--- a/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
+++ b/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
@@ -1,9 +1,10 @@
-jsconsole.tool.JavaScriptConsoleTool.tab.jsInput.title=JavaScript Source
-jsconsole.tool.JavaScriptConsoleTool.tab.ftlInput.title=Freemarker Source
-jsconsole.tool.JavaScriptConsoleTool.tab.parameterInput.title=Execution Parameters
+jsconsole.tool.JavaScriptConsoleTool.tab.jsInput.title=JavaScript
+jsconsole.tool.JavaScriptConsoleTool.tab.ftlInput.title=Freemarker
+jsconsole.tool.JavaScriptConsoleTool.tab.parameterInput.title=Parameters
 
-jsconsole.tool.JavaScriptConsoleTool.tab.consoleOutput.title=Console Output
+jsconsole.tool.JavaScriptConsoleTool.tab.consoleOutput.title=Console
 jsconsole.tool.JavaScriptConsoleTool.tab.textOutput.title=Text Output
+jsconsole.tool.JavaScriptConsoleTool.tab.performanceReport.title=Performance
 
 jsconsole.tool.JavaScriptConsoleTool.button.execute.label=Execute
 jsconsole.tool.JavaScriptConsoleTool.button.execute.title=Execute in currently selected JavaScript Console backend
