Backend separation, localStorage introduction and optimzation

--- a/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/backend/i18n/CommonBackend.properties
+++ b/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/backend/i18n/CommonBackend.properties
@@ -4,6 +4,12 @@ jsconsole.backend.webscript.parameters.urlArguments.description=
 jsconsole.backend.parameters.runAs.label=Run as
 jsconsole.backend.parameters.runAs.description=
 
+jsconsole.backend.repository.parameters.space.label=Space
+jsconsole.backend.repository.parameters.space.description=
+
+jsconsole.backend.repository.parameters.document.label=Document
+jsconsole.backend.repository.parameters.document.description=
+
 jsconsole.backend.repository.parameters.isolation.label=Transaction isolation
 jsconsole.backend.repository.parameters.isolation.description=
 jsconsole.backend.repository.parameters.isolation.none.label=None
