Update to use new WidgetsOverrideMixin from Aikau 1.0.97

--- a/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
+++ b/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
@@ -11,3 +11,9 @@ jsconsole.tool.JavaScriptConsoleTool.button.execute.title=Execute in currently s
 
 jsconsole.tool.JavaScriptConsoleTool.menu.backends.label=Backends
 jsconsole.tool.JavaScriptConsoleTool.menu.backends.title=Select active JavaScript Console backend
+
+jsconsole.tool.JavaScriptConsoleTool.tab.jsInput.placeholder=Type in the JavaScript code here...
+jsconsole.tool.JavaScriptConsoleTool.tab.ftlInput.placeholder=Type in the FreeMarker template code here...
+
+jsconsole.tool.JavaScriptConsoleTool.tab.consoleOutput.placeholder=Console output (via print() or logger) will be included here...
+jsconsole.tool.JavaScriptConsoleTool.tab.textOutput.placeholder=Output of the FreeMarker template will be included here...
