Add documentation menu

--- a/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
+++ b/javascript-console-share-aikau/src/main/amp/web/js/javascript-console/tool/i18n/JavaScriptConsoleTool.properties
@@ -12,6 +12,19 @@ jsconsole.tool.JavaScriptConsoleTool.button.execute.title=Execute in currently s
 jsconsole.tool.JavaScriptConsoleTool.menu.backends.label=Backends
 jsconsole.tool.JavaScriptConsoleTool.menu.backends.title=Select active JavaScript Console backend
 
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.label=Documentation
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.js.label=JavaScript
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.js.mozilla.label=Mozilla Javascript Reference
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.js.w3schools.label=W3Schools Javascript Reference
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.js.alf51scriptRootObjects.label=Alfresco 5.1 Script Root Objects
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.js.alf51scriptApi.label=Alfresco 5.1 Script API
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.js.alf51scriptServicesApi.label=Alfresco 5.1 Script Services API
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.ftl.label=FreeMarker
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.ftl.manual.label=FreeMarker Manual
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.search.label=Search
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.search.fts.label=Full Text Search
+jsconsole.tool.JavaScriptConsoleTool.menu.documentation.search.cmisql.label=CMIS SQL (CMIS 1.1 Specification)
+
 jsconsole.tool.JavaScriptConsoleTool.tab.jsInput.placeholder=Type in the JavaScript code here...
 jsconsole.tool.JavaScriptConsoleTool.tab.ftlInput.placeholder=Type in the FreeMarker template code here...
 
